[gd_scene load_steps=3 format=3 uid="uid://ct6q5ory650sj"]

[ext_resource type="Script" uid="uid://c0v07qethtwac" path="res://scripts/servant_selection.gd" id="1_clfld"]
[ext_resource type="Texture2D" uid="uid://bo53uonhe4fn2" path="res://images/jopa.png" id="2_buxd3"]

[node name="_HBoxContainer_3" type="HBoxContainer"]
offset_right = 444.0
offset_bottom = 335.0
size_flags_horizontal = 0
script = ExtResource("1_clfld")

[node name="_Button_4" type="Button" parent="."]
layout_mode = 2
text = "<"

[node name="_VBoxContainer_5" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ascensions_TabCont" type="TabContainer" parent="_VBoxContainer_5"]
unique_name_in_owner = true
layout_mode = 2

[node name="character_image" type="TextureRect" parent="_VBoxContainer_5/ascensions_TabCont"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture = ExtResource("2_buxd3")
expand_mode = 1
stretch_mode = 5

[node name="character_text" type="Label" parent="_VBoxContainer_5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 70)
layout_mode = 2
text = "Пример описания персонажа"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="_VBoxContainer_5"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "t"

[node name="_Button_8" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = ">"

[connection signal="pressed" from="_Button_4" to="." method="_on_left_button_pressed"]
[connection signal="tab_changed" from="_VBoxContainer_5/ascensions_TabCont" to="." method="_on_ascensions_tab_cont_tab_changed"]
[connection signal="pressed" from="_VBoxContainer_5/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="_Button_8" to="." method="_on_right_button_pressed"]
